--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".lifecycles.LifeApplication"
         android:theme="@style/Theme.MVVM">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -17,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".liveData.LiveDataActivity"/>
+        <activity android:name=".lifecycles.LifecycleActivity"/>
     </application>
 
 </manifest>
