dataStore还要在研究研究，先搞room吧

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".liveData.LiveDataActivity"/>
         <activity android:name=".lifecycles.LifecycleActivity"/>
+        <activity android:name=".dataStore.DataStoreActivity"/>
     </application>
 
 </manifest>
